complete chapter two; overview of ml algs

--- a/GraphMLBook/2a_ml_algs.ipynb
+++ b/GraphMLBook/2a_ml_algs.ipynb
@@ -195,7 +195,14 @@
     "These graphs belong to a family that learns function *f(X)* that maps a specific set of features (X) to an embedding vector and is able to apply learned function tonew, unseen features.\n",
     "\n",
     "\n",
-    "Here we can define *unsupervised* and *supervised* versions. e.g. graph autoencoding methods are suitable in unsupervised tasks, whilst graph regularisation for semi-supervised/supervised settings.\n"
+    "Here we can define *unsupervised* and *supervised* versions. e.g. graph autoencoding methods are suitable in unsupervised tasks, whilst graph regularisation for semi-supervised/supervised settings.\n",
+    "\n",
+    "\n",
+    "For unsupervised algorithms, the embedding of a specific dataset is performed only usig the information contained in the input dataset, such as nodes, edges or graphs. For supervised, external information is used to guide the embedding process, such as labels that assigns nodes/edges/graphs to a specific class. This process is more complex as it tries to find the best vectorial representation to find the best assignment of a label to an instance. We want to find the best compact representation of input data to maximise the prediction performances. From a maths perspective, these models are trained with a loss function, which can be generalised with two terms:\n",
+    "-  First in supervised setting to minimize difference between prediction and target\n",
+    "-  Second to evaluate similarity between input graph and one reconstructed after ENC + DEC steps (structure reconstruction error).\n",
+    "\n",
+    "For unsupervised settings, we mostly aim to reconstruct the graph in embedding space. Embedding space vector can be used for classical machine learning algorithms or for data visualisations. Or active algorithms during the learning process where the ML algorithm finds compact and meaningful solutions to a specific problem."
    ]
   },
   {
