run graphsage with features

--- a/GraphMLBook/6_social_networks.ipynb
+++ b/GraphMLBook/6_social_networks.ipynb
@@ -743,7 +743,7 @@
     "\n",
     "Perform edgeprediction task for Facebook Social Graph\n",
     "\n",
-    "##### Parse Node Features\n",
+    "#### Parse Node Features\n",
     "Load features describing each node; a lot of data parsing.."
    ]
   },
@@ -894,7 +894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Link Prediction"
+    "### Link Prediction"
    ]
   },
   {
@@ -934,7 +934,7 @@
     "-  2: GraphSAGE (with and without features) will be used for link prediction. Jointly learn embedding and perform classification task.\n",
     "-  3: Hand crafted features will be extracted and used to train a Random Forest Classifier\n",
     "\n",
-    "##### Node2Vec"
+    "#### Node2Vec"
    ]
   },
   {
@@ -1102,8 +1102,332 @@
    "source": [
     "Not bad at all. We observe that node2vec already provides a powerful representation for predicting links on combined Facebook Ego Network.\n",
     "\n",
-    "##### GraphSAGE\n",
-    "No Features"
+    "#### GraphSAGE\n",
+    "Two-layer GraphSAGE that given labeled pairs of nodes, outputs a pair of node embeddings. Then a fully connected NN can process these embeddings and produce link predictions. GraphSAGE and FCNN will be concatenated to be able to train E2E so that embeddings learning stage is influenced by predictions.\n",
+    "\n",
+    "**Featureless Approach**: Not consider available node features at the moment. A common approach is to assign each node a one-hot feature vector of length $|V|$ (number of nodes in the graph), where only the cell corresponding to the node is 1 and the rest is 0. We do this in Python as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4039, 4039)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# eye: Creates 2d array with 1's on diagonal and m everywhere\n",
+    "# identity matrix of size |V|\n",
+    "eye = np.eye(graph_train.number_of_nodes()) \n",
+    "print(eye.shape)\n",
+    "fake_features = {n: eye[n] for n in G.nodes()} # python dict to assign as attribute\n",
+    "nx.set_node_attributes(graph_train, fake_features, \"fake\")\n",
+    "\n",
+    "eye = np.eye(graph_test.number_of_nodes())\n",
+    "fake_features = {n: eye[n] for n in G.nodes()}\n",
+    "nx.set_node_attributes(graph_test, fake_features, \"fake\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'features': array([1., 1., 1., ..., 0., 0., 0.]),\n",
+       " 'fake': array([1., 0., 0., ..., 0., 0., 0.])}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_train.nodes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from stellargraph.mapper import GraphSAGELinkGenerator\n",
+    "\n",
+    "# generator to feed model; use StellarGraph GraphSageLinkGenerator; will provide model with pairs of nodes as input\n",
+    "batch_size = 64 # num inputs per minibatch\n",
+    "num_samples = [4, 4] # num of first and second-hop neighbour samples that GraphSAGE considers\n",
+    "\n",
+    "# convert to graph train and test for stellargraph\n",
+    "sg_graph_train = StellarGraph.from_networkx(graph_train, node_features=\"fake\")\n",
+    "sg_graph_test = StellarGraph.from_networkx(graph_test, node_features=\"fake\")\n",
+    "\n",
+    "# create traingen and trainflow\n",
+    "train_gen = GraphSAGELinkGenerator(sg_graph_train, batch_size, num_samples)\n",
+    "train_flow = train_gen.flow(samples_train, labels_train, shuffle=True, seed=24)\n",
+    "\n",
+    "test_gen = GraphSAGELinkGenerator(sg_graph_test, batch_size, num_samples)\n",
+    "test_flow = test_gen.flow(samples_test, labels_test, seed=24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "link_classification: using 'ip' method to combine node embeddings into edge embeddings\n"
+     ]
+    }
+   ],
+   "source": [
+    "from stellargraph.layer import GraphSAGE, link_classification\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "# create our model\n",
+    "layer_sizes = [20, 20] # two hidden layers of size 20\n",
+    "# GraphSage with bias and dropout also to reduce overfitting\n",
+    "graphsage = GraphSAGE(\n",
+    "    layer_sizes=layer_sizes, generator=train_gen, bias=True, dropout=0.3\n",
+    ")\n",
+    "x_inp, x_out = graphsage.in_out_tensors()\n",
+    "\n",
+    "# concat output with link_classification; takes pairs of node embeddings\n",
+    "# uses binary operators (inner-product here - ip) to produce edge embeddings\n",
+    "# and passes through FCNN for classification\n",
+    "prediction = link_classification(\n",
+    "    output_dim=1, output_act=\"sigmoid\", edge_embedding_method=\"ip\"\n",
+    ")(x_out)\n",
+    "\n",
+    "model = keras.Model(inputs=x_inp, outputs=prediction)\n",
+    "\n",
+    "# Adam optimizer and MSE as loss function\n",
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(lr=1e-3),\n",
+    "    loss=keras.losses.mse,\n",
+    "    metrics=[\"acc\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "249/249 [==============================] - 301s 1s/step - loss: 0.2347 - acc: 0.5969 - val_loss: 0.1931 - val_acc: 0.7292\n",
+      "Epoch 2/10\n",
+      "249/249 [==============================] - 299s 1s/step - loss: 0.1940 - acc: 0.7310 - val_loss: 0.1824 - val_acc: 0.7459\n",
+      "Epoch 3/10\n",
+      "249/249 [==============================] - 298s 1s/step - loss: 0.1837 - acc: 0.7527 - val_loss: 0.1785 - val_acc: 0.7522\n",
+      "Epoch 4/10\n",
+      "249/249 [==============================] - 300s 1s/step - loss: 0.1783 - acc: 0.7643 - val_loss: 0.1752 - val_acc: 0.7686\n",
+      "Epoch 5/10\n",
+      "249/249 [==============================] - 303s 1s/step - loss: 0.1737 - acc: 0.7833 - val_loss: 0.1748 - val_acc: 0.7765\n",
+      "Epoch 6/10\n",
+      "249/249 [==============================] - 300s 1s/step - loss: 0.1729 - acc: 0.7882 - val_loss: 0.1738 - val_acc: 0.7816\n",
+      "Epoch 7/10\n",
+      "249/249 [==============================] - 301s 1s/step - loss: 0.1715 - acc: 0.7922 - val_loss: 0.1740 - val_acc: 0.7874\n",
+      "Epoch 8/10\n",
+      "249/249 [==============================] - 301s 1s/step - loss: 0.1706 - acc: 0.7988 - val_loss: 0.1738 - val_acc: 0.7879\n",
+      "Epoch 9/10\n",
+      "249/249 [==============================] - 305s 1s/step - loss: 0.1693 - acc: 0.8034 - val_loss: 0.1736 - val_acc: 0.7858\n",
+      "Epoch 10/10\n",
+      "249/249 [==============================] - 307s 1s/step - loss: 0.1689 - acc: 0.8056 - val_loss: 0.1731 - val_acc: 0.7920\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs=10\n",
+    "history = model.fit(train_flow, epochs=epochs, validation_data=test_flow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.5023998523167805\n",
+      "Recall: 0.685430046593628\n",
+      "F1-Score: 0.5798135818908123\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics \n",
+    "y_pred = np.round(model.predict(train_flow)).flatten()\n",
+    "print('Precision:', metrics.precision_score(labels_train, y_pred)) \n",
+    "print('Recall:', metrics.recall_score(labels_train, y_pred)) \n",
+    "print('F1-Score:', metrics.f1_score(labels_train, y_pred)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.7080067867819342\n",
+      "Recall: 0.9931995919755185\n",
+      "F1-Score: 0.8266981132075472\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = np.round(model.predict(test_flow)).flatten()\n",
+    "print('Precision:', metrics.precision_score(labels_test, y_pred)) \n",
+    "print('Recall:', metrics.recall_score(labels_test, y_pred)) \n",
+    "print('F1-Score:', metrics.f1_score(labels_test, y_pred)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results are lower than node2vec. However, we have not considered real node features yet which can represent a lot of information. We can do that now.\n",
+    "\n",
+    "#### Introducing Node Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sg_graph_train = StellarGraph.from_networkx(graph_train, node_features=\"features\") # includes feature inputs\n",
+    "sg_graph_test = StellarGraph.from_networkx(graph_test, node_features=\"features\") # has features for each node\n",
+    "\n",
+    "train_gen = GraphSAGELinkGenerator(sg_graph_train, batch_size, num_samples)\n",
+    "train_flow = train_gen.flow(samples_train, labels_train, shuffle=True, seed=24)\n",
+    "\n",
+    "test_gen = GraphSAGELinkGenerator(sg_graph_test, batch_size, num_samples)\n",
+    "test_flow = test_gen.flow(samples_test, labels_test, seed=24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "link_classification: using 'ip' method to combine node embeddings into edge embeddings\n",
+      "Epoch 1/10\n",
+      "249/249 [==============================] - 192s 771ms/step - loss: 0.1799 - acc: 0.7976 - val_loss: 0.1674 - val_acc: 0.8506\n",
+      "Epoch 2/10\n",
+      "249/249 [==============================] - 192s 770ms/step - loss: 0.1714 - acc: 0.8432 - val_loss: 0.1668 - val_acc: 0.8575\n",
+      "Epoch 3/10\n",
+      "249/249 [==============================] - 188s 754ms/step - loss: 0.1691 - acc: 0.8567 - val_loss: 0.1664 - val_acc: 0.8599\n",
+      "Epoch 4/10\n",
+      "249/249 [==============================] - 192s 770ms/step - loss: 0.1677 - acc: 0.8575 - val_loss: 0.1665 - val_acc: 0.8607\n",
+      "Epoch 5/10\n",
+      "249/249 [==============================] - 194s 779ms/step - loss: 0.1669 - acc: 0.8620 - val_loss: 0.1664 - val_acc: 0.8623\n",
+      "Epoch 6/10\n",
+      "249/249 [==============================] - 190s 765ms/step - loss: 0.1661 - acc: 0.8570 - val_loss: 0.1667 - val_acc: 0.8461\n",
+      "Epoch 7/10\n",
+      "249/249 [==============================] - 191s 769ms/step - loss: 0.1661 - acc: 0.8546 - val_loss: 0.1666 - val_acc: 0.8476\n",
+      "Epoch 8/10\n",
+      "249/249 [==============================] - 194s 778ms/step - loss: 0.1660 - acc: 0.8588 - val_loss: 0.1667 - val_acc: 0.8526\n",
+      "Epoch 9/10\n",
+      "249/249 [==============================] - 190s 764ms/step - loss: 0.1657 - acc: 0.8627 - val_loss: 0.1664 - val_acc: 0.8661\n",
+      "Epoch 10/10\n",
+      "249/249 [==============================] - 192s 772ms/step - loss: 0.1656 - acc: 0.8692 - val_loss: 0.1664 - val_acc: 0.8642\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer_sizes = [20, 20]\n",
+    "graphsage = GraphSAGE(\n",
+    "    layer_sizes=layer_sizes, generator=train_gen, bias=True, dropout=0.3\n",
+    ")\n",
+    "\n",
+    "x_inp, x_out = graphsage.in_out_tensors()\n",
+    "\n",
+    "prediction = link_classification(\n",
+    "    output_dim=1, output_act=\"sigmoid\", edge_embedding_method=\"ip\"\n",
+    ")(x_out)\n",
+    "\n",
+    "model = keras.Model(inputs=x_inp, outputs=prediction)\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(lr=1e-3),\n",
+    "    loss=keras.losses.mse,\n",
+    "    metrics=[\"acc\"],\n",
+    ")\n",
+    "\n",
+    "epochs = 10\n",
+    "history = model.fit(train_flow, epochs=epochs, validation_data=test_flow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.5026561090508169\n",
+      "Recall: 0.6315325525752424\n",
+      "F1-Score: 0.5597722960151804\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics \n",
+    "y_pred = np.round(model.predict(train_flow)).flatten()\n",
+    "print('Precision:', metrics.precision_score(labels_train, y_pred)) \n",
+    "print('Recall:', metrics.recall_score(labels_train, y_pred)) \n",
+    "print('F1-Score:', metrics.f1_score(labels_train, y_pred)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = np.round(model.predict(test_flow)).flatten()\n",
+    "print('Precision:', metrics.precision_score(labels_test, y_pred)) \n",
+    "print('Recall:', metrics.recall_score(labels_test, y_pred)) \n",
+    "print('F1-Score:', metrics.f1_score(labels_test, y_pred)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See that introducing real node features brings a good improvement, though the best is still node2vec.\n",
+    "\n",
+    "### Hand-Crafted Features for Link Prediction\n",
+    "Shallow embedding approach with hand-crafted features to train a supervised classifier."
    ]
   },
   {
